fix: CORS configuration and CloudFront API routing - use allowedOriginPatterns for wildcard with credentials, add SPA routing function, remove error responses breaking API